--- a/styles/base.css
+++ b/styles/base.css
@@ -22,7 +22,7 @@ body {
   border-bottom: solid 1px #aaa;
   display: flex;
   flex-direction: column;
-  font-size: 3.5em;
+  font-size: 5.9em;
   width: 100%;
 }
 
@@ -36,7 +36,8 @@ body {
 }
 
 .values-form .buttons {
-  flex: 0 3em;
+  flex: 0 2em;
+  padding: .2em .5em;
 }
 
 .values-form .inputs div {
@@ -66,7 +67,7 @@ body {
 
 .values-form .inputs div button {
   --color: #aaa;
-  flex: 0 1.5em;
+  flex: 0 1.7em;
   height: 1.5em;
   background-color: transparent;
   border-style: none;
@@ -153,6 +154,33 @@ body {
   margin: 0 auto;
 }
 
+footer {
+  background-color: rgba(255, 255, 255, .5);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 4em;
+  height: 2em;
+  display: flex;
+  justify-content: space-around;
+  padding: .25em 0;
+}
+
+footer > * {
+  display: block;
+  margin: 0 .5em;
+}
+
+footer a {
+  flex: 0 1.5em;
+}
+
+footer img {
+  height: 1.58em;
+}
+
 @media (min-height: 800px) {
   .chart-container .pie-chart {
     --size: 70em;
@@ -181,5 +209,12 @@ body {
 
   .chart-container {
     flex: 1;
+  }
+
+  footer {
+    font-size: 2em;
+    width: 500px;
+    left: auto;
+    right: 0;
   }
 }
